rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__pg_generate_subscripts_2_reverse.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 5874
expression: "execute_query(\"SELECT generate_subscripts(r.a, 1, true) FROM (SELECT ARRAY[1,2,3] as a UNION ALL SELECT ARRAY[3,4,5]) as r;\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-------------------------------------------------+
| generate_subscripts(r.a,Int64(1),Boolean(true)) |
+-------------------------------------------------+
| 3                                               |
| 2                                               |
| 1                                               |
| 3                                               |
| 2                                               |
| 1                                               |
+-------------------------------------------------+
